serviceB/nodejs-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-b
  template:
    metadata:
      labels:
        app: nodejs-b
    spec:
      containers:
      - name: nodejs-b
        image: nodejs-b:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: nodejs-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
