serviceB/ingress-route-service-b.yaml
#apiVersion: traefik.containo.us/v1alpha1
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: serviceb-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api-gateway.com`) && PathPrefix(`/serviceb`)
    #  - match: Host(`localhost`) && PathPrefix(`/servicea`)
    kind: Rule
    services:
    - name: service-b
      port: 80
